--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,14 +65,24 @@
                 android:textColor="#ffbbbebf"
                 android:textSize="13sp" />
 
-            <EditText
-                android:id="@+id/et_username"
-                android:layout_width="200dp"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_username"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:hint="@string/login_hint_username" />
+                android:layout_gravity="center">
+                <EditText
+                    android:id="@+id/et_username"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="@string/login_hint_username" />
+            </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="200dp"
@@ -81,6 +91,7 @@
                 android:gravity="center"
                 android:hint="@string/login_hint_password"
                 android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
