--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,8 +5,9 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/ll_signin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
@@ -88,7 +89,7 @@
                 android:hint="@string/signin_phone" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+<!--        <android.support.design.widget.TextInputLayout
             android:id="@+id/til_identify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -110,14 +111,15 @@
             android:layout_gravity="center"
             android:text="@string/signin_send_identify"
             style="@style/ButtonTextStyle"
-            />
+            />-->
 
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/ll_signin"
         android:layout_alignParentRight="true"
         android:layout_margin="24dp"
         android:src="@drawable/ic_action_ok" />
