--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -128,7 +128,7 @@
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_attach"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp" />
+                        android:layout_height="@dimen/item_attach_size" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
