--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -2,6 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:icon="@drawable/ic_library_books_black_24dp"
+        android:orderInCategory="100"
+        android:checkable="true"
+        android:id="@+id/action_all_note_book"
+        android:title="所有笔记本"
+        />
+
+    <item
         android:orderInCategory="10000"
         android:title="@string/menu_drawer_options">
         <menu>
