optimize the interactive of the notebook fragment and the edit note activity.

--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -138,6 +138,7 @@
                 android:paddingRight="8dp">
 
                 <TextView
+                    android:id="@+id/tv_note_create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -148,6 +149,7 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/tv_note_modify"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
