--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -4,8 +4,10 @@
 <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     app:theme="@android:style/ThemeOverlay.Material.Light"
+    app:title=""
+    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
     android:id="@+id/toolbar"
     android:elevation="4dp"
