--- a/app/src/main/res/layout/fragment_addnewnotebook.xml
+++ b/app/src/main/res/layout/fragment_addnewnotebook.xml
@@ -4,38 +4,62 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/item_toolbar"/>
+    <include layout="@layout/item_toolbar" />
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="20dp">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="标题"
-            android:textSize="25sp"
             android:singleLine="true"
-            />
+            android:textSize="25sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_detail"
-        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="描述"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
     </android.support.design.widget.TextInputLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:weightSum="1"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/tv_choose_color"
+            android:clickable="true"
+            android:layout_width="0dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="点击选择封面颜色"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/colorDividerWhite"
+            android:layout_height="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:background="#f00"
+            android:elevation="4dp"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
