--- a/app/src/main/res/layout/fragment_all_notebook.xml
+++ b/app/src/main/res/layout/fragment_all_notebook.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_gravity="center"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_notebook"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="all note book"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        />
+        android:layout_height="match_parent" />
+
 
 </LinearLayout>
