--- a/app/src/main/res/layout/fragment_notebook.xml
+++ b/app/src/main/res/layout/fragment_notebook.xml
@@ -5,26 +5,26 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_notebook_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="name"
-        android:id="@+id/tv_notebook_name"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 
     <TextView
+        android:id="@+id/tv_notebook_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="detail"
-        android:id="@+id/tv_notebook_detail"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 
     <View
         android:id="@+id/notebook_color"
         android:layout_width="100dp"
-        android:background="#f00"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:background="#f00" />
 
     <ImageButton
         android:id="@+id/bt_delete_notebook"
@@ -33,5 +33,11 @@
         android:background="?attr/selectableItemBackground"
         android:padding="10dp"
         android:src="@drawable/ic_delete_black_24dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_note"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
