--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@color/ControlNormal</item>
+    </style>
+
+    <style name="AppTheme.TranslucentStatus">
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
