--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,32 +2,41 @@
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/drawer"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/item_toolbar"
+        <include
             android:id="@+id/toolbar"
-            />
+            layout="@layout/item_toolbar" />
 
         <FrameLayout
-            android:layout_below="@id/toolbar"
+            android:id="@+id/main_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/main_fragment"
-            />
+            android:layout_below="@id/toolbar">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_margin="24dp"
+                android:elevation="5dp"
+                />
+        </FrameLayout>
 
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nv"
         android:layout_width="match_parent"
-        android:layout_gravity="start"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         app:headerLayout="@layout/main_header"
         app:menu="@menu/menu_drawer" />
 </android.support.v4.widget.DrawerLayout>
