--- a/app/src/main/res/layout/item_notebook.xml
+++ b/app/src/main/res/layout/item_notebook.xml
@@ -2,11 +2,13 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/cv_notebook"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground"
+    android:elevation="5dp"
     android:layout_margin="24dp">
 
-
     <FrameLayout
+        android:id="@+id/fl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -18,15 +20,15 @@
 
         <TextView
             android:id="@+id/tv_notebook_title"
-            android:layout_width="160dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:singleLine="true"
             android:text="NoteBook Title"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
     </FrameLayout>
 
