--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -82,6 +82,7 @@
                             android:src="@drawable/ic_alarm_add_black_18dp" />
 
                         <TextView
+                            android:id="@+id/tv_alarm"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
