--- a/app/src/main/res/layout/main_header.xml
+++ b/app/src/main/res/layout/main_header.xml
@@ -44,6 +44,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_user_name"
