--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,10 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorLogin"
-
         android:focusable="true"
         android:focusableInTouchMode="true"
-        />
+        android:transitionName="view_shelter" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
+
                 <EditText
                     android:id="@+id/et_username"
                     android:layout_width="200dp"
@@ -83,14 +83,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
-            <EditText
-                android:id="@+id/et_password"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:hint="@string/login_hint_password"
-                android:inputType="textPassword" />
+
+                <EditText
+                    android:id="@+id/et_password"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:hint="@string/login_hint_password"
+                    android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
@@ -100,22 +101,21 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:transitionName="sign_in"
                     android:id="@+id/bt_signin"
+                    style="@style/ButtonTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="注册"
-                    style="@style/ButtonTextStyle"
-                    />
+                    android:text="注册" />
 
                 <Button
                     android:id="@+id/bt_login"
+                    style="@style/ButtonTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="登录"
-                    style="@style/ButtonTextStyle"
-                    />
+                    android:text="登录" />
             </LinearLayout>
 
             <TextView
