--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -16,6 +16,7 @@
             android:background="@color/colorPrimary"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:transitionName="view_shelter"
             app:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:title="注册" />
 
@@ -116,6 +117,7 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:transitionName="sign_in"
         android:id="@+id/fab_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
