--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:theme="@android:style/ThemeOverlay.Material.Light"
-    app:title=" "
-    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
-    android:id="@+id/toolbar"
     android:elevation="4dp"
-    />
+    android:fitsSystemWindows="true"
+    android:transitionName="sign_in"
+    app:theme="@android:style/ThemeOverlay.Material.Light"
+    app:title=" " />
