--- a/app/src/main/res/layout/main_header.xml
+++ b/app/src/main/res/layout/main_header.xml
@@ -8,12 +8,11 @@
     android:background="@android:color/transparent">
 
     <ImageView
+        android:id="@+id/iv_user_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:id="@+id/iv_user_back"
-        android:src="@drawable/header_background"
-        />
+        android:src="@drawable/header_background" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -22,11 +21,10 @@
         android:layout_margin="24dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-
             android:id="@+id/iv_portrait"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:src="@android:drawable/ic_menu_camera"
+            android:src="#000"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp" />
 
