--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -51,25 +51,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/til_content"
+                    <com.ruffneck.cloudnote.view.NoteRichEditorHandler
+                        android:padding="8dp"
+                        android:id="@+id/editorHandler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <com.ruffneck.cloudnote.view.NoteRichEditor
+                        android:id="@+id/richEditor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp">
-
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="正文" />
-
-                    </android.support.design.widget.TextInputLayout>
-
+                        android:layout_below="@id/editorHandler"
+                        android:layout_margin="8dp"
+                        app:fontColor="@android:color/white" />
 
                     <RelativeLayout
                         android:id="@+id/group_alarm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/til_content"
+                        android:layout_below="@id/richEditor"
                         android:background="?attr/selectableItemBackground"
                         android:clickable="true"
                         android:padding="8dp">
