--- a/app/src/main/res/layout/fragment_notebook.xml
+++ b/app/src/main/res/layout/fragment_notebook.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tv_notebook_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="detail"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
@@ -16,8 +17,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_note"
-        android:layout_margin="16dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp" />
 
 </LinearLayout>
