--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -41,6 +41,8 @@
             android:src="@drawable/ic_keyboard_arrow_right_24dp" />
 
         <View
+            android:clickable="false"
+            android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
             android:layout_height="1.0px"
             android:layout_below="@id/tv_ringtone_content"
